Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,10 @@
 trigger:
 - main
 
+resources:
+- repo: self
+
+
 variables:
   dockerRegistryServiceConnection: 'ACR'
   imageRepository: 'tetrisgameapp'
